[gd_scene load_steps=2 format=3 uid="uid://cl8rnrykxcdgw"]

[ext_resource type="Script" path="res://ui/level_up_screen.gd" id="1_level_up"]

[node name="LevelUpScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_up")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Skills" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ScrollMargin" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Skills"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SkillsBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Skills/ScrollMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Abilities" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ScrollMargin" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Abilities"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AbilitiesBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Abilities/ScrollMargin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
